--- a/.github/workflows/playwright-main.yml
+++ b/.github/workflows/playwright-main.yml
@@ -48,10 +48,10 @@ jobs:
             playwright-
 
       - name: Install Playwright browsers
-        run: yarn playwright install chromium --with-deps
+        run: npx playwright install chromium
 
       - name: Run Playwright tests
-        run: npx playwright test --ignore-snapshots --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        run: npx playwright test tests/e2e/homePage.spec.js --ignore-snapshots --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
         env:
           FIRST_NAME: ${{ secrets.FIRST_NAME }}
           LAST_NAME: ${{ secrets.LAST_NAME }}
