--- a/.github/workflows/playwright-main.yml
+++ b/.github/workflows/playwright-main.yml
@@ -91,6 +91,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      pages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
