--- a/.github/workflows/playwright-main.yml
+++ b/.github/workflows/playwright-main.yml
@@ -48,7 +48,7 @@ jobs:
             playwright-
 
       - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+        run: npx playwright install chromium --with-deps
 
       - name: Run Playwright tests
         run: npx playwright test tests/e2e/homePage.spec.js --ignore-snapshots --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
@@ -67,7 +67,7 @@ jobs:
           retention-days: 1
 
       - name: Save Node.js modules cache
-        if: ${{ steps.cache-playwright-restore.outputs.cache-hit != 'true' }}
+        if: always() && ${{ steps.cache-playwright-restore.outputs.cache-hit != 'true' }}
         id: cache-node-save
         uses: actions/cache/save@v4
         with:
@@ -134,10 +134,33 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v5.0.0
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3.0.1
         with:
           path: playwright-report/
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4.0.5
+
+      - name: Post comment with report link
+        uses: actions/github-script@v7.0.1
+        with:
+          script: |
+            const deploymentUrl = "${{ steps.deployment.outputs.page_url }}";
+
+            if (context.issue.number) {
+              // If the workflow is triggered by a pull request
+              github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: `Playwright report is available here: ${deploymentUrl}`
+              });
+            } else {
+              // If the workflow is triggered manually or not by a pull request
+              console.log(`Workflow run manually. Playwright report URL: ${deploymentUrl}`);
+            }
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
