--- a/.github/workflows/playwright-main.yml
+++ b/.github/workflows/playwright-main.yml
@@ -90,9 +90,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: read
+      contents: write
       pages: write
       issues: write
+      pull-requests: write
 
     steps:
       - name: Checkout code
