--- a/.github/workflows/playwright-main.yml
+++ b/.github/workflows/playwright-main.yml
@@ -48,7 +48,7 @@ jobs:
             playwright-
 
       - name: Install Playwright browsers
-        run: npx playwright install chromium --with-deps
+        run: npx playwright install chromium --with-deps --only-shell
 
       - name: Run Playwright tests
         run: npx playwright test tests/e2e/homePage.spec.js --ignore-snapshots --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
@@ -146,23 +146,16 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4.0.5
 
-      - name: Post comment with report link
-        uses: actions/github-script@v7.0.1
-        with:
-          script: |
-            const deploymentUrl = "${{ steps.deployment.outputs.page_url }}";
+      - name: Get deployment URL
+        if: ${{ github.event_name != 'workflow_dispatch' }}
+        run: echo "DEPLOYMENT_URL=${{ steps.deployment.outputs.page_url }}" >> $GITHUB_ENV
 
-            if (context.issue.number) {
-              // If the workflow is triggered by a pull request
-              github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: `Playwright report is available here: ${deploymentUrl}`
-              });
-            } else {
-              // If the workflow is triggered manually or not by a pull request
-              console.log(`Workflow run manually. Playwright report URL: ${deploymentUrl}`);
-            }
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set commit status
+        if: ${{ github.event_name != 'workflow_dispatch' }}
+        uses: octodemo-resources/github-commit-status@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          state: success
+          context: Playwright Test Results
+          description: Cloudflare Hosted Results
+          target_url: ${{ steps.deployment.outputs.page_url }}
