--- a/.github/workflows/playwright-main.yml
+++ b/.github/workflows/playwright-main.yml
@@ -88,6 +88,8 @@ jobs:
     if: ${{ !cancelled() }}
     needs: [playwright-tests]
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
     permissions:
       id-token: write
       contents: read
