--- a/.github/workflows/playwright-main.yml
+++ b/.github/workflows/playwright-main.yml
@@ -19,33 +19,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Restore Node.js modules cache
-        id: cache-node-restore
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            node_modules
-            ~/.cache/yarn
-          key: node-modules-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            node-modules-
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
-
-      - name: Restore Playwright browsers cache
-        id: cache-playwright-restore
-        uses: actions/cache/restore@v4
-        with:
-          path: ~/.cache/ms-playwright
-          key: playwright-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            playwright-
+        run: npm install --frozen-lockfile
 
       - name: Install Playwright browsers
         run: npx playwright install chromium --with-deps --only-shell
@@ -65,24 +45,6 @@ jobs:
           name: blob-report-${{ matrix.shardIndex }}
           path: blob-report
           retention-days: 1
-
-      - name: Save Node.js modules cache
-        if: always() && ${{ steps.cache-playwright-restore.outputs.cache-hit != 'true' }}
-        id: cache-node-save
-        uses: actions/cache/save@v4
-        with:
-          path: |
-            node_modules
-            ~/.cache/yarn
-          key: node-modules-${{ hashFiles('**/yarn.lock') }}
-
-      - name: Save Playwright browsers cache
-        id: cache-playwright-save
-        if: always() && ${{ steps.cache-playwright-restore.outputs.cache-hit != 'true' }}
-        uses: actions/cache/save@v4
-        with:
-          path: ~/.cache/ms-playwright
-          key: playwright-${{ hashFiles('**/yarn.lock') }}
 
   merge-reports:
     if: ${{ !cancelled() }}
