update Playwright workflow to trigger on pull requests to both production and main branches

--- a/.github/workflows/playwright-main.yml
+++ b/.github/workflows/playwright-main.yml
@@ -2,7 +2,7 @@ name: Playwright Tests - Main env
 on:
   pull_request:
     types: [opened, reopened]
-    branches: [production]
+    branches: [production, main]
   workflow_dispatch:
 
 jobs:
